docs: improve java development skill routing